added div(div img)

--- a/markup/home work 3v0/index.html
+++ b/markup/home work 3v0/index.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
-<body>	<div class="content">
+<body>	
+	<div class="content">
 		<h1><img src="img/logo.png" alt="logo"> </h1>
 			
 		<header>	
@@ -49,7 +50,7 @@
 					</li>
 			</ul>
 		</nav>		
-
+		<div class="ddd">
 		<div class="content1">
 			<img class="con" src="img/image.png" alt="content">
 		</div>	
@@ -58,7 +59,7 @@
 			Lorem Ipsum є, фактично, 	стандартною 
 			"рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.
 		</p>
-		
+		</div>
 	 	<footer>
 			<ul>
 				<li class="footer">
@@ -76,6 +77,6 @@
 				<li class="footer2">2014 &copy; All Rights Reserved</li>
 			</ul>	
 		</footer>
-		</div>
+	</div>	
 </body>
 </html>
