--- a/markup/home work 5#2/home work 5#2.html
+++ b/markup/home work 5#2/home work 5#2.html
@@ -31,7 +31,7 @@
 			</div>
 			<div class="form">
 				<form action="#">
-					<input class="fb-bott" type="botton" name="fb-bott" >
+					<input class="fb-bott" type="button" name="fb-bott" value="fb" >
 					<div class="ou-line"> 
 						<div class="line"></div>
 						<span>OU</span> 
