--- a/markup/home work 7-8/index.html
+++ b/markup/home work 7-8/index.html
@@ -184,6 +184,7 @@
 			 
 
 	</div>
+	</div>
 	<div class="body__background body__background--foot">
 				<footer class="cont  clearfix footer">
 					<nav class="nav-foot" >
