home work 7-8 full resolution corrected

--- a/markup/home work 7-8/index.html
+++ b/markup/home work 7-8/index.html
@@ -33,7 +33,7 @@
 						<li class="sub__item"> <a class="sub__link" href="#">Dolor Sit Amet</a></li>
 						</ul>
 						</li>
-				</nav></ul>
+				</ul></nav>
 			</header>
 		</div>
 
