home work 7-8 full resolution corrected fonts\logo

--- a/markup/home work 7-8/index.html
+++ b/markup/home work 7-8/index.html
@@ -11,7 +11,7 @@
 	<div class="background_image">
 		<div class="conteiner">
 			<header class="header clearfix">
-				<img  class="header-logo" src="img/logo.png" alt="logo">
+				<img  class="header-logo" src="img/logo2.png" alt="logo">
 
 				<nav class="nav">
 					<ul class="menu menu-nav">
