--- a/markup/home work 7-8/index.html
+++ b/markup/home work 7-8/index.html
@@ -45,7 +45,7 @@
 					<p class="text-head__other-line">Semper sollicitudin gravida eget, vestibulum sit amet sapien. Nunc dignissim tincidunt est, et auctor turpis ornare a. Nam venenatis hendrerit est at volutpat. Morbi elementum euismod lacus id semper. In odio nunc, imperdiet eget aliquam quis, euismod id lectus. Nulla interdum arcu et felis aliquam a tempus lectus lobortis.</p>
 				</div>
 				<div class="head-pic">
-					<img class="head-pic__img" src="img/iphone4.png" alt="iphone4">
+					<img class="head-pic__img" src="img/ip.png" alt="iphone4">
 					<a href="#" class="but-play"></a>
 
 
