--- a/markup/home work 9/index.html
+++ b/markup/home work 9/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -20,7 +20,7 @@
   		<link rel="stylesheet" type="text/css" href="css/grad.css" />
 	<![endif]-->
 
-	<!--[if if lte IE 9]>
+	<!--[if if lte IE 8]>
   		<link rel="stylesheet" type="text/css" href="css/transp.css" />
 	<![endif]-->
 
