--- a/markup/home work 9/index.html
+++ b/markup/home work 9/index.html
@@ -16,11 +16,11 @@
       	 document.createElement('footer');
    		</script>
 	<![endif]-->
-	<!--[if if lte IE 9]>
+	<!--[if lte IE 9]>
   		<link rel="stylesheet" type="text/css" href="css/grad.css" />
 	<![endif]-->
 
-	<!--[if if lte IE 8]>
+	<!--[if lte IE 8]>
   		<link rel="stylesheet" type="text/css" href="css/transp.css" />
 	<![endif]-->
 
